--- a/spec/jasmine-dom-runner.html
+++ b/spec/jasmine-dom-runner.html
@@ -3,10 +3,13 @@
 <html>
 <head>
   <title>Jasmine-Dom Test Runner</title>
-  <link href="jasmine-1.0.1/jasmine.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="jasmine-2.0.0-rc5/jasmine.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
-  <script type="text/javascript" src="jasmine-1.0.1/jasmine.js"></script>  
-  <script type="text/javascript" src="jasmine-1.0.1/jasmine-html.js"></script>
+  <script src="jasmine-2.0.0-rc5/jasmine.js" type="text/javascript" charset="utf-8"></script>
+  <script src="jasmine-2.0.0-rc5/jasmine-html.js" type="text/javascript" charset="utf-8"></script>
+  <script src="jasmine-2.0.0-rc5/boot.js" type="text/javascript" charset="utf-8"></script>
+  
+  
 
   <script type="text/javascript" src="../lib/jasmine-dom-fixtures.js"></script>
   <script type="text/javascript" src="../lib/jasmine-dom-matchers.js"></script>
@@ -15,22 +18,22 @@
   <script type="text/javascript" src="suites/jasmine-fixture_spec.js"></script>
 
   <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
-
-      var trivialReporter = new jasmine.TrivialReporter();
-
-      jasmineEnv.addReporter(trivialReporter);
-
-      jasmineEnv.specFilter = function(spec) {
-        return trivialReporter.specFilter(spec);
-      };
-
-      window.onload = function() {
-        jasmineEnv.execute();
-      };
-    })();
+    // (function() {
+    //   var jasmineEnv = jasmine.getEnv();
+    //   jasmineEnv.updateInterval = 1000;
+    // 
+    //   var trivialReporter = new jasmine.TrivialReporter();
+    // 
+    //   jasmineEnv.addReporter(trivialReporter);
+    // 
+    //   jasmineEnv.specFilter = function(spec) {
+    //     return trivialReporter.specFilter(spec);
+    //   };
+    // 
+    //   window.onload = function() {
+    //     jasmineEnv.execute();
+    //   };
+    // })();
   </script>
 </head>
 
