--- a/spec/jasmine-dom-runner.html
+++ b/spec/jasmine-dom-runner.html
@@ -8,8 +8,8 @@
   <script src="jasmine-2.0.0-rc5/jasmine.js" type="text/javascript" charset="utf-8"></script>
   <script src="jasmine-2.0.0-rc5/jasmine-html.js" type="text/javascript" charset="utf-8"></script>
   <script src="jasmine-2.0.0-rc5/boot.js" type="text/javascript" charset="utf-8"></script>
-  
-  
+
+
 
   <script type="text/javascript" src="../lib/jasmine-dom-fixtures.js"></script>
   <script type="text/javascript" src="../lib/jasmine-dom-matchers.js"></script>
@@ -18,22 +18,12 @@
   <script type="text/javascript" src="suites/jasmine-fixture_spec.js"></script>
 
   <script type="text/javascript">
-    // (function() {
-    //   var jasmineEnv = jasmine.getEnv();
-    //   jasmineEnv.updateInterval = 1000;
-    // 
-    //   var trivialReporter = new jasmine.TrivialReporter();
-    // 
-    //   jasmineEnv.addReporter(trivialReporter);
-    // 
-    //   jasmineEnv.specFilter = function(spec) {
-    //     return trivialReporter.specFilter(spec);
-    //   };
-    // 
-    //   window.onload = function() {
-    //     jasmineEnv.execute();
-    //   };
-    // })();
+
+    (function() {
+      window.onload = function() {
+        window.jasmine_boot();
+      };
+    })();
   </script>
 </head>
 
